--- a/kernel-default.properties
+++ b/kernel-default.properties
@@ -150,7 +150,8 @@ kernel.prid.revoke-scheduler-days_of_week=*
 ## Database properties
 # Database hostname below is assuming postgres is running inside cluster in 'postgres' namespace
 # If database is external to production, provide the DNS or ip of the host and port 
-mosip.kernel.database.hostname=postgres-postgresql.postgres
+# mosip.kernel.database.hostname=postgres-postgresql.postgres
+mosip.kernel.database.hostname=rdsstack-databaseb269d8bb-wtjrn0lxj2sw.cluster-cveklit2rj4m.ap-south-1.rds.amazonaws.com
 mosip.kernel.database.port=5432
 
 javax.persistence.jdbc.driver=org.postgresql.Driver
