--- a/admin-default.properties
+++ b/admin-default.properties
@@ -13,7 +13,7 @@ mosip.admin.request-id=ADMIN.REQUEST
 ## Database properties
 # Database hostname below is assuming postgres is running inside cluster in 'postgres' namespace
 # If database is external to production, provide the DNS or ip of the host and port 
-mosip.kernel.database.hostname=postgres-postgresql.postgres
+mosip.kernel.database.hostname=rdsstack-databaseb269d8bb-wtjrn0lxj2sw.cluster-cveklit2rj4m.ap-south-1.rds.amazonaws.com
 mosip.kernel.database.port=5432
 
 ## Account management
