--- a/digital-card-default.properties
+++ b/digital-card-default.properties
@@ -1,7 +1,7 @@
 ## Database properties
 # Database hostname below is assuming postgres is running inside cluster in 'postgres' namespace
 # If database is external to production, provide the DNS or ip of the host and port
-mosip.digitalcard.database.hostname=postgres-postgresql.postgres
+mosip.digitalcard.database.hostname=rdsstack-databaseb269d8bb-wtjrn0lxj2sw.cluster-cveklit2rj4m.ap-south-1.rds.amazonaws.com
 mosip.digitalcard.database.port=5432
 
 # Websub
