--- a/id-authentication-default.properties
+++ b/id-authentication-default.properties
@@ -33,7 +33,7 @@ mosip.ida.auth.appId=ida
 ## Database
 # Database hostname below is assuming postgres is running inside cluster in 'postgres' namespace
 # If database is external to production, provide the DNS or ip of the host and port 
-mosip.ida.database.hostname=postgres-postgresql.postgres
+mosip.ida.database.hostname=rdsstack-databaseb269d8bb-wtjrn0lxj2sw.cluster-cveklit2rj4m.ap-south-1.rds.amazonaws.com
 mosip.ida.database.port=5432
 mosip.ida.database.user=idauser
 mosip.ida.database.password=${db.dbuser.password}
