--- a/id-repository-default.properties
+++ b/id-repository-default.properties
@@ -241,7 +241,7 @@ mosip.idrepo.update-vid.rest.headers.mediaType=application/json
 mosip.idrepo.update-vid.rest.timeout=100
 
 ## Credential request generator
-mosip.credential.service.database.hostname=postgres-postgresql.postgres
+mosip.credential.service.database.hostname=rdsstack-databaseb269d8bb-wtjrn0lxj2sw.cluster-cveklit2rj4m.ap-south-1.rds.amazonaws.com
 mosip.credential.service.database.port=5432
 
 mosip.credential.service.jdbc.url=jdbc:postgresql://${mosip.credential.service.database.hostname}:${mosip.credential.service.database.port}/mosip_credential?currentSchema=credential
