--- a/idp-binding-default.properties
+++ b/idp-binding-default.properties
@@ -53,7 +53,7 @@ management.health.redis.enabled=false
 
 ##----------------------------------------- Database properties --------------------------------------------------------
 
-mosip.idp.database.hostname=postgres-postgresql.postgres
+mosip.idp.database.hostname=rdsstack-databaseb269d8bb-wtjrn0lxj2sw.cluster-cveklit2rj4m.ap-south-1.rds.amazonaws.com
 mosip.idp.database.port=5432
 spring.datasource.url=jdbc:postgresql://${mosip.idp.database.hostname}:${mosip.idp.database.port}/mosip_idpbinding?currentSchema=idpbinding
 spring.datasource.username=idpbindinguser
