--- a/id-repository-default.properties
+++ b/id-repository-default.properties
@@ -17,7 +17,8 @@ management.endpoint.restart.enabled=true
 
 # Database hostname below is assuming postgres is running inside cluster in 'postgres' namespace
 # If database is external to production, provide the DNS or ip of the host and port 
-mosip.idrepo.db.url=postgres-postgresql.postgres
+#mosip.idrepo.db.url=postgres-postgresql.postgres
+mosip.idrepo.db.url=rdsstack-databaseb269d8bb-wtjrn0lxj2sw.cluster-cveklit2rj4m.ap-south-1.rds.amazonaws.com
 mosip.idrepo.db.port=5432
 mosip.idrepo.db.identity.db-name=mosip_idrepo
 mosip.idrepo.db.identity.username=idrepouser
