--- a/kernel-default.properties
+++ b/kernel-default.properties
@@ -41,6 +41,7 @@ mosip.kernel.sms.country.code=91
 mosip.kernel.sms.number.length=10
 #mosip.kernel.sms.gateway : "infobip" or "msg91"
 mosip.kernel.sms.gateway=${sms.gateway.provider}
+
 ## --msg91 gateway--
 #mosip.kernel.sms.api=smsapi
 #mosip.kernel.sms.authkey=authkey
@@ -49,7 +50,7 @@ mosip.kernel.sms.gateway=${sms.gateway.provider}
 #mosip.kernel.sms.unicode=unicode
 
 ## --msg91 gateway--
-mosip.kernel.sms.enabled=true
+mosip.kernel.sms.enabled=false
 mosip.kernel.sms.country.code=+91
 mosip.kernel.sms.number.length=10
 mosip.kernel.sms.api=http://${sms.host}:${sms.port}/sendsms
